<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/llLogin"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_150sdp"
        android:text="@string/loginHeading"
        android:textSize="@dimen/_20sdp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/orange" />

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/loginSubText"
        android:textColor="@color/orange"
        android:textSize="@dimen/_8sdp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <ImageView
            android:src="@drawable/telephone"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/editPhoneNumberHint"
            android:inputType="number"
            android:maxLength="10"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/orange"
            android:textColorHint="@color/violet"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
    <View
        android:background="@color/violet"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1ssp"/>
    <LinearLayout
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <ImageView
            android:src="@drawable/password"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:background="@null"
            android:hint="@string/editPasswordHint"
            android:textColor="@color/orange"
            android:inputType="textPassword"
            android:textColorHint="@color/violet"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <View
        android:background="@color/violet"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1ssp"/>
    <RelativeLayout
        android:layout_margin="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp">
        <TextView
            android:id="@+id/tvForgot"
            android:text="@string/forgotPassword"
            android:textColor="@color/orange"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="@dimen/_8sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/llSignIn"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/signInText"
                android:textColor="@color/violet"
                android:textSize="@dimen/_8sdp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/signInClick"
                android:textColor="@color/orange"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:animateLayoutChanges="true"
        android:layout_height="@dimen/_40sdp">
        <Button
            android:id="@+id/btnSignIn"
            android:text="@string/signInButton"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:background="@drawable/button_background"
            android:layout_height="@dimen/_40sdp"/>
    </RelativeLayout>
</LinearLayout>