<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/llSignIn"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/back_top"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/signInHeading"
        android:textSize="@dimen/_20sdp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/orange" />

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/signInSubHeading"
        android:textColor="@color/orange"
        android:textSize="@dimen/_8sdp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <ImageView
                    android:src="@drawable/user"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:hint="Enter your email address (optional)"
                    android:textColor="@color/orange"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/violet"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <View
                android:background="@color/violet"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1ssp"/>
            <RelativeLayout
                android:id="@+id/rlUsertype"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <ImageView
                    android:layout_alignParentStart="true"
                    android:src="@drawable/telephone"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:hint="Enter phone number"
                    android:textColor="@color/orange"
                    android:maxLength="10"
                    android:inputType="number"
                    android:textColorHint="@color/violet"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
            <View
                android:background="@color/violet"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1ssp"/>
            <LinearLayout
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <ImageView
                    android:src="@drawable/password"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:hint="Enter your password"
                    android:textColor="@color/orange"
                    android:maxLength="10"
                    android:inputType="textPassword"
                    android:textColorHint="@color/violet"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <View
                android:background="@color/violet"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1ssp"/>
            <RelativeLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivCheck"
                    android:tag="uncheck"
                    android:layout_alignParentStart="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_centerVertical="true"
                    android:src="@drawable/uncheck"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"/>
                <TextView
                    android:id="@+id/tvTerms"
                    android:textColor="@color/orange"
                    android:text="@string/terms_and_privacy"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_8sdp"
                    android:layout_toEndOf="@id/ivCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:animateLayoutChanges="true"
                android:layout_height="@dimen/_40sdp">
                <Button
                    android:id="@+id/btnSignUp"
                    android:text="Sign Up"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textSize="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:background="@drawable/button_background"
                    android:layout_height="@dimen/_40sdp"/>
                <ImageView
                    android:id="@+id/ivLoadder"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/tvLogin"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:textSize="@dimen/_8sdp"
                android:text="@string/already_have_an_account"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>